@@ -27,7 +27,7 @@ type Config struct {
 	ConfigDir        string           `config:"config_dir"`
 	ShutdownTimeout  time.Duration    `config:"shutdown_timeout"`
 	Modules          []*common.Config `config:"modules"`
-	ProspectorReload *common.Config   `config:"config.prospectors"`
+	ConfigProspector *common.Config   `config:"config.prospectors"`
 }
 
 var (
