@@ -362,6 +362,13 @@ filebeat.prospectors:
 # Default is 0, not waiting.
 #filebeat.shutdown_timeout: 0
 
+# Enable filebeat config reloading
+#filebeat.config.prospectors:
+  #enabled: false
+  #path: configs/*.yml
+  #reload.enabled: true
+  #reload.period: 10s
+
 #================================ General ======================================
 
 # The name of the shipper that publishes the network data. It can be used to group
